added contact us section

--- a/src/pages/home/Reviews/Reviews.css
+++ b/src/pages/home/Reviews/Reviews.css
@@ -1,6 +1,6 @@
 .bg-review-banner {
   background-image: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.233)),
-    url("../../../images/rev-banner.png");
+    url("../../../images/rev-banner-2.jpg");
   height: auto;
   background-size: cover;
   color: white;
