--- a/src/pages/SingleChefRecipes/RecipeCard/RecipeCard.css
+++ b/src/pages/SingleChefRecipes/RecipeCard/RecipeCard.css
@@ -3,7 +3,7 @@
 }
 
 .btn-favorite {
-  background-color: #b68c5a;
+  background-color: #e74c3c;
   color: white;
   border: none;
   width: 100%;
@@ -14,7 +14,7 @@
 }
 
 .btn-favorite:hover {
-  background-color: #301c04e4;
+  background-color: #f39c12;
   color: white;
   border: none;
 }
